<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WindFinder</string>
    <string name="loading_data">Loading data</string>
    
    <string name="error_loading_data">Error loading data</string>
    <string name="error_not_a_number">is not a number</string>
    
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    
    <string name="remove_station_warning">Do you want to remove</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_remove_station">Remove station</string>
    <string name="action_add_station">Add station</string>
    <string name="action_to_wind_info">To wind info</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    
    <string name="add_station_info">Please add a station</string>
    
    
    <string name="wind_info_push">Wind info</string>
    
    <string name="select_continent">Select continent</string>
    <string name="select_country">Select country</string>
    <string name="select_region">Select region</string>
    <string name="select_station">Select station</string>
    <string name="air_temperature">Air temperature</string>
    <string name="water_temperature">Water temperature</string>
    <string name="wind_direction">Wind direction</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_gusts">wind gusts</string>
    <string name="weather">Weather</string>
    <string name="clouds">Clouds</string>
    <string name="precipitation">Precipitation</string>
    <string name="precipitation_type">Precipitation type</string>
    <string name="wave_height">Wave Height</string>
    <string name="wave_direction">Wave direction</string>
    <string name="wave_period">Wave period</string>
    <string name="air_pressure">Air pressure</string>
    
    <string-array   name="wind_direction_values">
        <item>E</item>
        <item>ENE</item>
        <item>ESE</item>
        <item>N</item>
        <item>NE</item>
        <item>NNE</item>
        <item>NNW</item>
        <item>NW</item>
        <item>S</item>
        <item>SE</item>
        <item>SSE</item>
        <item>SSW</item>
        <item>SW</item>
        <item>W</item>
        <item>WNW</item>        
    </string-array>

</resources>